--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,9 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>fang</groupId>
+            <groupId>song</groupId>
             <artifactId>server-common</artifactId>
-            <version>1.0.3</version>
+            <version>1.0.16</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
